--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
 
 #name {
     font-weight: bold;
-    font-size: 16px;
+    font-size: 20px;
 }
 
 button {
@@ -30,10 +30,10 @@ button {
 }
 
 .button-1 {
-    height: 18vmin;
-    width: 18vmin;
+    height: 15vmin;
+    width: 15vmin;
     border-radius: 50%;
-    border: 1.75vmin solid black;
+    border: 1.1vmin solid black;
     cursor: pointer;
     background-image:
         radial-gradient(white 20%, white 20%, black 20%, black 30%, transparent 30%, transparent), linear-gradient(red 46%, black 46%, black 54%, white 54%);
@@ -46,6 +46,9 @@ button {
 .button-1:hover {
     box-shadow: rgba(255, 255, 255, .2) 0 3px 15px inset, rgba(0, 0, 0, .1) 0 3px 5px, rgba(0, 0, 0, .1) 0 10px 13px;
     transform: scale(1.05);
+}
+.button-1:active{
+  transform: translateY(4px);
 }
 
 #content-area {
