--- a/styles.css
+++ b/styles.css
@@ -47,8 +47,10 @@ button {
     box-shadow: rgba(255, 255, 255, .2) 0 3px 15px inset, rgba(0, 0, 0, .1) 0 3px 5px, rgba(0, 0, 0, .1) 0 10px 13px;
     transform: scale(1.05);
 }
-.button-1:active{
+.button-1:focus{
+    box-shadow: 0 5px 15px rgba(145, 92, 182, .4);
   transform: translateY(4px);
+
 }
 
 #content-area {
